--- a/.github/workflows/check-local-test.yml
+++ b/.github/workflows/check-local-test.yml
@@ -15,7 +15,7 @@ jobs:
             const body = context.payload.pull_request.body || "";
             const title = context.payload.pull_request.title;
 
-            const enforcedTitlePattern = /^(feature)(\(.*\))?:/i;
+            const enforcedTitlePattern = /^(feature|bug)(\(.*\))?:/i;
 
             if (!enforcedTitlePattern.test(title)) {
               console.log("✅ Skipping check: PR title does not require manual verification.");
